# sara_udev

./: .gitignore  50-imu.rules  50-laser.rules  99-usb-gripper.rules  CMakeLists.txt  README.md  install.sh  package.xml
launch/: launch_arduino.launch  launch_arduinos.launch
rules/: 10-arduino-face.rules  10-arduino.rules  10-kinova-arm.rules  50-drive.rules  50-dynamixel.rules  50-estop.rules  50-imu.rules  50-kinova.rules  50-laser.rules  50-neck-vertical.rules  50-robotiq.rules  80-kinova.rules
src/: arduino_launcher.py
