<?xml version="1.0"?>
<package>
  <name>sara_udev</name>
  <version>0.0.0</version>
  <description>The sara_launch package</description>

  <maintainer email="philippe117@live.fr">tpouplier</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
